--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 class="text-center">Marvel Superhero Hunter</h1>
     <div class="mt-3">
         <input type="text" id="search-input" class="form-control" placeholder="Search character...">
-        <button class="btn btn-primary mt-3" id="search-button">Search</button>
+        <!-- <button class="btn btn-primary mt-3" id="search-button">Search</button> -->
     </div>
     <br>
     <br>
